--- a/src/blocks/radio-button/radio-button.pug
+++ b/src/blocks/radio-button/radio-button.pug
@@ -1,5 +1,5 @@
 mixin radio-button(idName, labelName)
   div(class='radio')
-    input(id= idName name='radio' type='radio' checked)
-    label(for= idName class='radio-label')
+    input(id= idName name='radio' type='radio' class='radio__input' checked)
+    label(for= idName class='radio__label')
     label(for= idName class='radio__value')= labelName
