--- a/src/blocks/radio-button/radio-button.scss
+++ b/src/blocks/radio-button/radio-button.scss
@@ -1,8 +1,8 @@
 .radio {
-  input[type="radio"] {
+  &__input {
     position: absolute;
     opacity: 0;
-    + .radio-label {
+    + .radio__label {
       &:before {
         content: "";
         background: #fff;
@@ -22,7 +22,7 @@
     }
     &:checked {
       opacity: 0;
-      + .radio-label {
+      + .radio__label {
         &:before {
           border: 2px solid #bc9cff;
           background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
@@ -31,14 +31,14 @@
       }
     }
     &:focus {
-      + .radio-label {
+      + .radio__label {
         &:before {
           outline: none;
           border-color: #fff;
         }
       }
     }
-    + .radio-label {
+    + .radio__label {
       &:empty {
         &:before {
           margin-right: 0;
@@ -46,14 +46,23 @@
       }
     }
   }
+  &__value {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
+    margin-left: 10px;
+  }
 }
 
-.radio__value {
-  font-family: Montserrat;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 24px;
-  color: rgba(31, 32, 65, 0.75);
-  margin-left: 10px;
-}
+// .radio__value {
+//   font-family: Montserrat;
+//   font-style: normal;
+//   font-weight: normal;
+//   font-size: 20px;
+//   line-height: 24px;
+//   color: rgba(31, 32, 65, 0.75);
+//   margin-left: 10px;
+// }
