--- a/src/blocks/single-airdatepicker/single-airdatepicker.scss
+++ b/src/blocks/single-airdatepicker/single-airdatepicker.scss
@@ -1,9 +1,9 @@
 // @import "../components/variables.scss";
 
-.flex-wrap {
-  display: flex;
-  justify-content: space-between;
-}
+// .flex-wrap {
+//   display: flex;
+//   justify-content: space-between;
+// }
 
 .arrow__wrapper {
   position: relative;
