--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -22,7 +22,7 @@
       }
       & ul {
         padding: 0;
-        li {
+        & li {
           margin: 28px 0;
           & a {
             font-family: "Montserrat";
