--- a/src/components/info-room/info-room.scss
+++ b/src/components/info-room/info-room.scss
@@ -1,13 +1,97 @@
 .information{
   margin-top: -20px;
+  &__top-part {
+    display: flex;
+  }
+  &__bottom-part {
+    padding-top: 70px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  &__title {
+    font-family: "OpenSans-Bold";
+    text-transform: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-left: 15px;
+    &_info {
+      margin-bottom: 21px;
+    }
+    &_impression {
+      margin-bottom: 20px;
+    }
+    &_rules {
+      margin-left: 40px;
+      margin-top: 50px;
+      margin-bottom: 20px;
+    }
+    &_cancel {
+      margin-top: 45px;
+      margin-left: 0;
+      margin-bottom: 11px;
+    }    
+  }
+  &__rules {
+    width: 400px;
+  }
+  &__cancel {
+    font-size: 18.6px;
+    line-height: 32px;
+    margin-left: 136px;
+    margin-top: 5px;
+  }
+  &__impression {
+    margin-left: 5.6vw;
+    &_second {
+      margin-top: 5px;
+    }
+  }
+  &__text {
+    font-size: 1.14rem;
+    margin-top: 40px;
+    line-height: 36px;
+    color: rgba(31, 32, 65, 0.75);
+  }
 }
 
-.information__top-part {
+// .information__top-part {
+//   display: flex;
+// }
+
+// .information__bottom-part {
+//   padding-top: 70px;
+// }
+
+
+.information__info {
   display: flex;
+  flex-wrap: wrap;
 }
 
-.information__bottom-part {
-  padding-top: 70px;
+.information__info .material-icons {
+  font-family: "MaterialIcons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 3.83rem;
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+  color: #9ba1fb;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: "liga";
 }
 
 .gallery__big-img {
@@ -31,78 +115,78 @@
   flex-wrap: wrap;
 }
 
-.information__title {
-  font-family: "OpenSans-Bold";
-  text-transform: none;
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-left: 15px;
-}
+// .information__title {
+//   font-family: "OpenSans-Bold";
+//   text-transform: none;
+//   font-size: 1.5rem;
+//   font-weight: bold;
+//   margin-left: 15px;
+// }
 
 .information-border {
   border-bottom: 2px solid rgba(31, 32, 65, 0.1);
   margin-bottom: 13px;
 }
 
-.information__rules {
-  width: 400px;
-}
+// .information__rules {
+//   width: 400px;
+// }
 
-.information__cancel {
-  font-size: 18.6px;
-  line-height: 32px;
-  margin-left: 136px;
-  margin-top: 5px;
-}
+// .information__cancel {
+//   font-size: 18.6px;
+//   line-height: 32px;
+//   margin-left: 136px;
+//   margin-top: 5px;
+// }
 
-.information__title_info {
-  margin-bottom: 21px;
-}
+// .information__title_info {
+//   margin-bottom: 21px;
+// }
 
-.information__title_impression {
-  margin-bottom: 20px;
-}
+// .information__title_impression {
+//   margin-bottom: 20px;
+// }
 
-.information__title_rules {
-  margin-left: 40px;
-  margin-top: 50px;
-  margin-bottom: 20px;
-}
+// .information__title_rules {
+//   margin-left: 40px;
+//   margin-top: 50px;
+//   margin-bottom: 20px;
+// }
 
-.information__title_details {
-  margin-bottom: 10px;
-  margin-top: 25px;
-}
+// .information__title_details {
+//   margin-bottom: 10px;
+//   margin-top: 25px;
+// }
 
-.information__title_cancel {
-  margin-top: 45px;
-  margin-left: 0;
-  margin-bottom: 11px;
-}
+// .information__title_cancel {
+//   margin-top: 45px;
+//   margin-left: 0;
+//   margin-bottom: 11px;
+// }
 
-.information__bottom-part {
-  display: flex;
-  flex-wrap: wrap;
-}
+// .information__bottom-part {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
 
-.information__impression {
-  margin-left: 5.6vw;
-}
+// .information__impression {
+//   margin-left: 5.6vw;
+// }
 
-.information-impression_second {
-  margin-top: 5px;
-}
+// .information-impression_second {
+//   margin-top: 5px;
+// }
 
-.information-impression_second .btn-like{
-  width: 70px;
-}
+// .information-impression_second .btn-like{
+//   width: 70px;
+// }
 
-.information__text {
-  font-size: 1.14rem;
-  margin-top: 40px;
-  line-height: 36px;
-  color: rgba(31, 32, 65, 0.75);
-}
+// .information__text {
+//   font-size: 1.14rem;
+//   margin-top: 40px;
+//   line-height: 36px;
+//   color: rgba(31, 32, 65, 0.75);
+// }
 
 .border {
   border-bottom: 1px solid grey;
