--- a/src/blocks/airdatepicker/airdatepicker.scss
+++ b/src/blocks/airdatepicker/airdatepicker.scss
@@ -1,60 +1,90 @@
-
-.datepicker__input {
-  position: relative;
-  display: inline-block;
-}
-.datepicker__input::before {
-  position: absolute;
-  top: 25%;
-  left: 78%;
-  content: "";
-  padding: 5px;
-  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
-  display: inline-block;
-  transform: rotate(-45deg);
-  margin-left: 10px;
-  color: rgba(31, 32, 65, 0.5);
-}
-
-.single-datepicker {
-  position: relative;
-  display: inline-block;
-}
-.single-datepicker::before {
-  margin-top: 5px;
-  position: absolute;
-  top: 30%;
-  left: 87%;
-  content: "";
-  padding: 5px;
-  box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
-  display: inline-block;
-  transform: rotate(-45deg);
-  margin-left: 10px;
-  color:rgba(31, 32, 65, 0.5); 
-}
-
-.range {
-  width: 220px;
-  height: 65px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  outline: none;
-  border: none;
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  padding-left: 20px;
-  &::placeholder {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1rem;
-    line-height: 18px;
-    color: rgba(31, 32, 65, 0.75);
+.datepicker {
+  &__input {
+    position: relative;
+    display: inline-block;
+    &::before {
+      position: absolute;
+      top: 25%;
+      left: 78%;
+      content: "";
+      padding: 5px;
+      box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+      display: inline-block;
+      transform: rotate(-45deg);
+      margin-left: 10px;
+      color: rgba(31, 32, 65, 0.5);
+    }
+  }
+  &__range {
+    width: 220px;
+    height: 65px;
+    border-radius: 4px;
+    margin-bottom: 30px;
+    outline: none;
+    border: none;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    padding-left: 20px;
+    &::placeholder {
+      font-style: normal;
+      font-weight: normal;
+      font-size: 1rem;
+      line-height: 18px;
+      color: rgba(31, 32, 65, 0.75);
+    }
   }
 }
+// .datepicker__input::before {
+//   position: absolute;
+//   top: 25%;
+//   left: 78%;
+//   content: "";
+//   padding: 5px;
+//   box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+//   display: inline-block;
+//   transform: rotate(-45deg);
+//   margin-left: 10px;
+//   color: rgba(31, 32, 65, 0.5);
+// }
+
+// .single-datepicker {
+//   position: relative;
+//   display: inline-block;
+// }
+// .single-datepicker::before {
+//   margin-top: 5px;
+//   position: absolute;
+//   top: 30%;
+//   left: 87%;
+//   content: "";
+//   padding: 5px;
+//   box-shadow: 2px -2px 0 0 rgba(31, 32, 65, 0.5) inset;
+//   display: inline-block;
+//   transform: rotate(-45deg);
+//   margin-left: 10px;
+//   color:rgba(31, 32, 65, 0.5);
+// }
+
+// .datepicker__range {
+//   width: 220px;
+//   height: 65px;
+//   border-radius: 4px;
+//   margin-bottom: 30px;
+//   outline: none;
+//   border: none;
+//   border: 1px solid rgba(31, 32, 65, 0.25);
+//   padding-left: 20px;
+//   &::placeholder {
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 1rem;
+//     line-height: 18px;
+//     color: rgba(31, 32, 65, 0.75);
+//   }
+// }
 @media only screen and (max-width: 400px) {
-  .range {
-    padding-left: 10px;
-  }
+  // .datepicker__range {
+  //   padding-left: 10px;
+  // }
 
   .datepicker {
     background: #fff;
@@ -75,6 +105,9 @@
     transition: opacity 0.3s ease, transform 0.3s ease, left 0s 0.3s,
       -webkit-transform 0.3s ease;
     z-index: 100;
+    &__range {
+      padding-left: 10px;
+    }
   }
 }
 
@@ -547,7 +580,7 @@
 }
 .datepicker--nav-action path {
   fill: none;
-  stroke: #BC9CFF;
+  stroke: #bc9cff;
   stroke-width: 2px;
 }
 
@@ -917,7 +950,6 @@
   background: none;
   border: none;
 }
-
 
 @media only screen and (max-width: 400px) {
   .range {
