--- a/src/blocks/bullet-list/bullet-list.pug
+++ b/src/blocks/bullet-list/bullet-list.pug
@@ -1,5 +1,5 @@
 mixin bullet-list(itemList)
   ul(class='bullet-list')
     each item in itemList
-      li
+      li(class='bullet-list__item')
         a= item
