--- a/src/blocks/bullet-list/bullet-list.scss
+++ b/src/blocks/bullet-list/bullet-list.scss
@@ -7,7 +7,7 @@
   border-radius: 5px;
   margin-left: -30px;
   margin-top: 10px;
-  > li {
+  &__item {
     list-style: none;
     position: relative;
     padding: 5px 0 0 1.7em;
@@ -32,13 +32,13 @@
 }
 
 @media only screen and (max-width: 600px) {
-  .bullet-list > li {
+  .bullet-list__item {
     font-size: 14px;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .bullet-list > li {
+  .bullet-list__item {
     font-size: 11px;
   }
 }
