--- a/src/blocks/calculator/calculator.scss
+++ b/src/blocks/calculator/calculator.scss
@@ -6,46 +6,91 @@
   box-sizing: border-box;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  &__container {
+    margin: 55px 41px;
+  }
+  &__title_datepicker {
+    margin-top: 30px;
+    &_checkout {
+      margin-left: 28%;
+    }
+  }
+  &__total-price {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 45px;
+  }
+  &__price {
+    margin-top: 25px;
+    & > .price {
+      &__count {
+        margin-top: 35px;
+      }
+      &__info {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 14px;
+        text-align: right;
+        color: rgba(31, 32, 65, 0.25);
+        border: 1px solid rgba(31, 32, 65, 0.25);
+        padding: 3px 12px;
+        box-sizing: border-box;
+        border-radius: 50%;
+        margin-left: 1vw;
+        &_extra {
+          margin-left: 2.6vw;
+        }
+      }
+    }
+  }
+  &__text {
+    font-size: 1.1rem;
+  }
 }
 
-.calculator__container {
-  margin: 55px 41px;
-}
+// .calculator__text {
+//   font-size: 1.1rem;
+// }
 
-.calculator__container p {
-  font-size: 1.1rem;
-}
+// .calculator__title_datepicker{
+//   margin-top: 30px;
+// }
+// .calculator__total-price {
+//   font-size: 1.5rem;
+//   font-weight: bold;
+//   margin-top: 45px;
+// }
 
-.calculator__title_datepicker{
-  margin-top: 30px;
-}
-.calculator__total-price {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 45px;
-}
+// .price {
+//   &__count {
+//     margin-top: 35px;
+//   }
+//   &__info {
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 20px;
+//     line-height: 14px;
+//     text-align: right;
+//     color: rgba(31, 32, 65, 0.25);
+//     border: 1px solid rgba(31, 32, 65, 0.25);
+//     padding: 3px 12px;
+//     box-sizing: border-box;
+//     border-radius: 50%;
+//     margin-left: 1vw;
+//     &_extra {
+//       margin-left: 2.6vw;
+//     }
+//   }
+// }
 
-.count__info {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 14px;
-  text-align: right;
-  color: rgba(31, 32, 65, 0.25);
-  border: 1px solid rgba(31, 32, 65, 0.25);
-  padding: 3px 12px;
-  box-sizing: border-box;
-  border-radius: 50%;
-  margin-left: 1vw;
-}
+// .price__info_extra {
+//   margin-left: 2.6vw;
+// }
 
-.count__info_extra {
-  margin-left: 2.6vw;
-}
-
-.calculator__title_datepicker_checkout {
-  margin-left: 28%;
-}
+// .calculator__title_datepicker_checkout {
+//   margin-left: 28%;
+// }
 // .room-number {
 //   font-size: 1.78rem;
 //   margin-top: 0;
@@ -65,13 +110,13 @@
   color: rgba(31, 32, 65, 0.5);
 }
 
-.calculator__count {
-  margin-top: 25px;
-}
+// .calculator__price {
+//   margin-top: 25px;
+// }
 
-.count__price {
-  margin-top: 35px;
-}
+// .price__count {
+//   margin-top: 35px;
+// }
 
 @media only screen and (max-width: 1600px) {
   .calculator {
@@ -82,34 +127,52 @@
 @media only screen and (max-width: 600px) {
   .calculator {
     width: 480px;
+    &__container {
+      margin: 10px;
+    }
+    &__datepicker .range {
+      width: 180px;
+    }
+    &__datepicker .datepicker {
+      width: 280px;
+    }
+    &__dropdown .dropdowns .dd-button {
+      width: 460px;
+    }
+    &__title_datepicker_checkout {
+      margin-left: 40%;
+    }
+    &__total-price {
+      font-weight: bold;
+    }
   }
 
-  .calculator__container {
-    margin: 10px;
-  }
+  // .calculator__container {
+  //   margin: 10px;
+  // }
 
-  .calculator__datepicker .range {
-    width: 180px;
-  }
+  // .calculator__datepicker .range {
+  //   width: 180px;
+  // }
 
-  .calculator__datepicker .datepicker {
-    width: 280px;
-  }
-  .calculator__dropdown .dropdowns .dd-button {
-    width: 460px;
-  }
+  // .calculator__datepicker .datepicker {
+  //   width: 280px;
+  // }
+  // .calculator__dropdown .dropdowns .dd-button {
+  //   width: 460px;
+  // }
 
-  .calculator__title_datepicker_checkout {
-    margin-left: 40%;
-  }
+  // .calculator__title_datepicker_checkout {
+  //   margin-left: 40%;
+  // }
 
-  .calculator .dropdowns .dd-menu {
-    width: 460px;
-  }
+  // .calculator .dropdowns .dd-menu {
+  //   width: 460px;
+  // }
 
-  .calculator__total-price {
-    font-weight: bold;
-  }
+  // .calculator__total-price {
+  //   font-weight: bold;
+  // }
 
   .calculator .btn-confirm {
     width: 460px;
@@ -119,77 +182,140 @@
 @media only screen and (max-width: 450px) {
   .calculator {
     width: 395px;
-  }
-
-  .calculator__container {
-    margin: 10px;
-  }
-
-  .calculator__datepicker .range {
-    width: 180px;
-  }
-
-  .calculator__datepicker .datepicker {
-    width: 280px;
-  }
-  .calculator__dropdown .dropdowns .dd-button {
-    width: 370px;
-  }
-
-  .calculator .dropdowns .dd-menu {
-    width: 370px;
-  }
-
-  .calculator__total-price {
-    font-weight: bold;
+    &__container {
+      margin: 10px;
+    }
+    &__datepicker {
+      & .range {
+        width: 180px;
+      }
+      & .datepicker {
+        width: 280px;
+      }
+    }
+    &__dropdown {
+      & .dd-button {
+        width: 370px;
+      }
+      & .dd-menu {
+        width: 370px;
+      }
+    }
+    &__total-price {
+      font-weight: bold;
+    }
+    &__title_datepicker_checkout {
+      margin-left: 25%;
+    }
   }
 
   .calculator .btn-confirm {
     width: 370px;
   }
-
-  .calculator__title_datepicker_checkout {
-    margin-left: 25%;
-  }
 }
+// .calculator__container {
+//   margin: 10px;
+// }
+
+// .calculator__datepicker .range {
+//   width: 180px;
+// }
+
+// .calculator__datepicker .datepicker {
+//   width: 280px;
+// }
+// .calculator__dropdown .dropdowns .dd-button {
+//   width: 370px;
+// }
+
+// .calculator .dropdowns .dd-menu {
+//   width: 370px;
+// }
+
+// .calculator__total-price {
+//   font-weight: bold;
+// }
+
+// .calculator .btn-confirm {
+//   width: 370px;
+// }
+
+//   .calculator__title_datepicker_checkout {
+//     margin-left: 25%;
+//   }
+// }
 
 @media only screen and (max-width: 400px) {
   .calculator {
     width: 310px;
-  }
-
-  .calculator__container {
-    margin: 10px;
-  }
-
-  .calculator__datepicker .range {
-    width: 130px;
-    height: 55px;
-  }
-
-  .calculator__datepicker .datepicker {
-    width: 280px;
-  }
-  .calculator__dropdown .dropdowns .dd-button {
-    width: 290px;
-    height: 55px;
-  }
-
-  .calculator .dropdowns .dd-menu {
-    width: 290px;
-  }
-
-  .calculator__total {
-    font-weight: bold;
-    font-size: 16px;
+    &__container {
+      margin: 10px;
+    }
+    &__datepicker {
+      & .range {
+        width: 130px;
+        height: 55px;
+      }
+      & .datepicker {
+        width: 280px;
+      }
+    }
+    &__dropdown {
+      & .dd-button {
+        width: 290px;
+        height: 55px;
+      }
+      & .dd-menu {
+        width: 290px;
+      }
+    }
+    &__total-price {
+      font-weight: bold;
+      font-size: 16px;
+    }
+    &__title_datepicker_checkout {
+      margin-left: 20%;
+    }
   }
 
   .calculator .btn-confirm {
     width: 290px;
     height: 55px;
   }
-
-  .calculator__title_datepicker_checkout{
-    margin-left: 20%;
-  }
 }
+// .calculator__container {
+//   margin: 10px;
+// }
+
+// .calculator__datepicker .range {
+//   width: 130px;
+//   height: 55px;
+// }
+
+// .calculator__datepicker .datepicker {
+//   width: 280px;
+// }
+// .calculator__dropdown .dropdowns .dd-button {
+//   width: 290px;
+//   height: 55px;
+// }
+
+// .calculator .dropdowns .dd-menu {
+//   width: 290px;
+// }
+
+// .calculator__total-price {
+//   font-weight: bold;
+//   font-size: 16px;
+// }
+
+// .calculator .btn-confirm {
+//   width: 290px;
+//   height: 55px;
+// }
+
+//   .calculator__title_datepicker_checkout {
+//     margin-left: 20%;
+//   }
+// }
+
