--- a/src/blocks/comfort-dropdown/comfort-dropdown.pug
+++ b/src/blocks/comfort-dropdown/comfort-dropdown.pug
@@ -1,26 +1,26 @@
-mixin dropdown(title, subtitle1, subtitle2, subtitle3, clean, apply) 
-  label.comfort
-    .comfort__button(id= title.id)= title.name
-    input(type='checkbox' class='comfort__input' id='comfort__input')
-    ul(class='comfort__menu')
-      li.flex-row
-        p(class='title')= subtitle1.name
-        .flex-row
-          button(class='plus button' id= subtitle1.plus) +
-          p(class='text' id= subtitle1.nimber) 0
-          button(class='minus button' id= subtitle1.minus) -
-      li.flex-row
-        p(class='title')= subtitle2
-        .flex-row
-          button(class='plus button' id= subtitle2.plus) +
-          p(class='text' id= subtitle2.nimber) 0
-          button(class='minus button' id= subtitle2.minus) -
-      li.flex-row
-        p(class='title')= subtitle3
-        .flex-row
-          button(class='plus button' id= subtitle3.plus) +
-          p(class='text' id= subtitle3.number) 0
-          button(class='minus button' id= subtitle3.minus) -
-      li.flex-row
-          button(class='clean' id= clean.id)= clean.title
-          button(class='apply' id= clean.id)= apply.title
+//- mixin dropdown(title, subtitle1, subtitle2, subtitle3, clean, apply) 
+//-   label.comfort
+//-     .comfort__button(id= title.id)= title.name
+//-     input(type='checkbox' class='comfort__input' id='comfort__input')
+//-     ul(class='comfort__menu')
+//-       li.flex-row
+//-         p(class='title')= subtitle1.name
+//-         .flex-row
+//-           button(class='plus button' id= subtitle1.plus) +
+//-           p(class='text' id= subtitle1.nimber) 0
+//-           button(class='minus button' id= subtitle1.minus) -
+//-       li.flex-row
+//-         p(class='title')= subtitle2
+//-         .flex-row
+//-           button(class='plus button' id= subtitle2.plus) +
+//-           p(class='text' id= subtitle2.nimber) 0
+//-           button(class='minus button' id= subtitle2.minus) -
+//-       li.flex-row
+//-         p(class='title')= subtitle3
+//-         .flex-row
+//-           button(class='plus button' id= subtitle3.plus) +
+//-           p(class='text' id= subtitle3.number) 0
+//-           button(class='minus button' id= subtitle3.minus) -
+//-       li.flex-row
+//-           button(class='clean' id= clean.id)= clean.title
+//-           button(class='apply' id= clean.id)= apply.title
