--- a/src/blocks/donut-chart/donut-chart.scss
+++ b/src/blocks/donut-chart/donut-chart.scss
@@ -1,121 +1,120 @@
-.donut svg{
-    width: 205px;
-    height: 250px;
-    margin-top: 7px;
-    margin-left: 7px;
-    margin-right: 15px;
+.donut svg {
+  width: 205px;
+  height: 250px;
+  margin-top: 7px;
+  margin-left: 7px;
+  margin-right: 15px;
 }
 .circle {
-    cx: 85px;
-    cy: 85px;
-    r: 75px;
-    fill: #fff;
-    stroke: #fff;
-    stroke-width: 7px;
-  }
-  .circle1 {
-    cx: 85px;
-    cy: 85px;
-    r: 75px;
-    fill: #fff;
-    stroke: #FFBA9C;
-    stroke-width: 5px;
-    stroke-dasharray: 230px;
-    stroke-dashoffset: 340px;
-  }
-  
-  .circle2 {
-    cx: 84px;
-    cy: 84px;
-    r: 75px;
-    fill: transparent;
-    stroke: #6FCF97;
-    stroke-width: 5px;
-    stroke-dasharray: 240px;
-    stroke-dashoffset: 485px;
-    transform: rotate(-90deg) translateX(-169px);
-  }
-  
-  .circle3 {
-    cx: 84px;
-    cy: 84px;
-    r: 75px;
-    fill: transparent;
-    stroke: #9BA1FB;
-    stroke-width: 10px;
-    stroke-dasharray: 450px;
-    stroke-dashoffset: 330px;
-    transform: rotate(-90deg) translateX(-171px);
-  }
-  
-  .figure-key{
-      margin-top: 65px;
-  }
-  .figure-key-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  .figure-key-list li {
-    margin: 0 0 9px;
-    padding: 0;
-    font-size: 19px;
-  }
-  .shape-circle {
-    display: inline-block;
-    vertical-align: middle;
-    width: 15px;
-    height: 15px;
-    -webkit-border-radius: 50%;
-       -moz-border-radius: 50%;
-            border-radius: 50%;
-  }
-  .shape-fuschia {
-    background:linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%);
-  }
-  .shape-lemon-lime {
-    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
-  }
-  .shape-blue {
-    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-  }
-  .shape-grey {
-    background:  linear-gradient(180deg, #919191 0%, #3D4975 100%);
-  }
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0,0,0,0);
-    border: 0;
-  }
-  
-  .chart-text {
-    fill: #8BA4F9;
-    -moz-transform: translateY(0.25em);
-    -ms-transform: translateY(0.25em);
-    -webkit-transform: translateY(0.25em);
-    transform: translateY(0.25em);
-  }
-  .chart-number {
-    font-size: 2em;
-    line-height: 1;
-    text-anchor: middle;
-    -moz-transform: translateY(-0.25em);
-    -ms-transform: translateY(-0.25em);
-    -webkit-transform: translateY(-0.25em);
-    transform: translateY(-0.25em);
-  }
-  .chart-label {
-    font-size: 1.5em;
-    text-transform: uppercase;
-    text-anchor: middle;
-    -moz-transform: translateY(0.7em);
-    -ms-transform: translateY(0.7em);
-    -webkit-transform: translateY(0.7em);
-    transform: translateY(0.7em);
-  }
-  
+  cx: 85px;
+  cy: 85px;
+  r: 75px;
+  fill: #fff;
+  stroke: #fff;
+  stroke-width: 7px;
+}
+.circle1 {
+  cx: 85px;
+  cy: 85px;
+  r: 75px;
+  fill: #fff;
+  stroke: #ffba9c;
+  stroke-width: 5px;
+  stroke-dasharray: 230px;
+  stroke-dashoffset: 340px;
+}
+
+.circle2 {
+  cx: 84px;
+  cy: 84px;
+  r: 75px;
+  fill: transparent;
+  stroke: #6fcf97;
+  stroke-width: 5px;
+  stroke-dasharray: 240px;
+  stroke-dashoffset: 485px;
+  transform: rotate(-90deg) translateX(-169px);
+}
+
+.circle3 {
+  cx: 84px;
+  cy: 84px;
+  r: 75px;
+  fill: transparent;
+  stroke: #9ba1fb;
+  stroke-width: 10px;
+  stroke-dasharray: 450px;
+  stroke-dashoffset: 330px;
+  transform: rotate(-90deg) translateX(-171px);
+}
+
+.figure-key {
+  margin-top: 65px;
+}
+.figure-key-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.figure-key-list li {
+  margin: 0 0 9px;
+  padding: 0;
+  font-size: 19px;
+}
+.shape-circle {
+  display: inline-block;
+  vertical-align: middle;
+  width: 15px;
+  height: 15px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+.shape-fuschia {
+  background: linear-gradient(180deg, #ffe39c 0%, #ffba9c 100%);
+}
+.shape-lemon-lime {
+  background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+}
+.shape-blue {
+  background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+}
+.shape-grey {
+  background: linear-gradient(180deg, #919191 0%, #3d4975 100%);
+}
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
+
+.chart-text {
+  fill: #8ba4f9;
+  -moz-transform: translateY(0.25em);
+  -ms-transform: translateY(0.25em);
+  -webkit-transform: translateY(0.25em);
+  transform: translateY(0.25em);
+}
+.chart-number {
+  font-size: 2em;
+  line-height: 1;
+  text-anchor: middle;
+  -moz-transform: translateY(-0.25em);
+  -ms-transform: translateY(-0.25em);
+  -webkit-transform: translateY(-0.25em);
+  transform: translateY(-0.25em);
+}
+.chart-label {
+  font-size: 1.5em;
+  text-transform: uppercase;
+  text-anchor: middle;
+  -moz-transform: translateY(0.7em);
+  -ms-transform: translateY(0.7em);
+  -webkit-transform: translateY(0.7em);
+  transform: translateY(0.7em);
+}
