--- a/src/blocks/input-subscription/input-subscription.pug
+++ b/src/blocks/input-subscription/input-subscription.pug
@@ -1,5 +1,5 @@
 mixin input-subscription(placeholder)
   form(class='form-subscribe')
-    input(type='text' placeholder= placeholder) 
-    button(type='submit')
+    input(type='text' class="form-subscribe__input" placeholder= placeholder) 
+    button(type='submit' class="form-subscribe__button")
         i(class='fa fa-arrow-right')
