--- a/src/blocks/input-subscription/input-subscription.scss
+++ b/src/blocks/input-subscription/input-subscription.scss
@@ -1,7 +1,7 @@
 .form-subscribe {
   width: 385px;
   margin-top: 35px;
-  & input {
+  &__input {
     padding: 24px;
     border: 1px solid grey;
     float: left;
@@ -29,32 +29,57 @@
       }
     }
   }
-}
-.form-subscribe button {
-  float: left;
-  width: 20%;
-  padding: 17.5px;
-  background: #fff;
-  color: #bc9cff;
-  font-size: 24px;
-  border:  1.5px solid rgba(31, 32, 65, 0.25);
-  border-left: none;
-  cursor: pointer;
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  &:hover {
+  &__button {
+    float: left;
+    width: 20%;
+    padding: 17.5px;
+    background: #fff;
     color: #bc9cff;
-    opacity: 0.7;
-  }
-  &:focus {
-    outline: none;
-  }
-  &::after {
-    content: "";
-    clear: both;
-    display: table;
+    font-size: 24px;
+    border:  1.5px solid rgba(31, 32, 65, 0.25);
+    border-left: none;
+    cursor: pointer;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    &:hover {
+      color: #bc9cff;
+      opacity: 0.7;
+    }
+    &:focus {
+      outline: none;
+    }
+    &::after {
+      content: "";
+      clear: both;
+      display: table;
+    }
   }
 }
+// .form-subscribe button {
+//   float: left;
+//   width: 20%;
+//   padding: 17.5px;
+//   background: #fff;
+//   color: #bc9cff;
+//   font-size: 24px;
+//   border:  1.5px solid rgba(31, 32, 65, 0.25);
+//   border-left: none;
+//   cursor: pointer;
+//   border-top-right-radius: 4px;
+//   border-bottom-right-radius: 4px;
+//   &:hover {
+//     color: #bc9cff;
+//     opacity: 0.7;
+//   }
+//   &:focus {
+//     outline: none;
+//   }
+//   &::after {
+//     content: "";
+//     clear: both;
+//     display: table;
+//   }
+// }
 
 @media only screen and (max-width: 600px) {
   .form-subscribe {
