--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -22,7 +22,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
-  &_perday {
+  &_per-day {
     font-weight: normal;
     font-size: 1rem;
   }
@@ -79,29 +79,26 @@
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     border-radius: 7px;
     margin: 20px 0;
-    & img {
+    &__img {
       width: 100%;
       height: 200px;
       background-color: red;
       border-top-left-radius: 7px;
       border-top-right-radius: 7px;
     }
-    &-container {
+    &__container {
       padding: 10px 20px;
     }
-    &-number {
+    &__number {
       font-style: normal;
       font-weight: bold;
       line-height: 17px;
       color: #1f2041;
     }
-    &-price {
+    &__price {
       font-style: normal;
       font-weight: bold;
       color: rgba(31, 32, 65, 0.5);
-    }
-    &-span {
-      font-weight: normal;
     }
   }
 }
