--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,7 +8,7 @@ mixin header(links)
       input(type='checkbox' class='menu__drop' id='drop')
       ul(class='menu__nav')
         each i in links
-          li 
-            a= i
+          li(class='nav__item')
+            a(class='item__link')= i
         if block
           block
